# MakineAI-Plugin-TextHook

./: .gitignore  CMakeLists.txt  README.md  manifest.json
docs/game-engines/: bethesda.md  gamemaker.md  rage.md  renpy.md  rpgmaker.md  unity.md  unreal.md
hook/: dllmain.cpp  pipe_client.cpp  pipe_client.h  text_hooks.cpp  text_hooks.h
include/makineai/: asset_parser.hpp  error.hpp  memory_extractor.hpp  parsers_factory.hpp
include/makineai/handlers/: engine_handler.hpp
include/makineai/plugin/: plugin_api.h  plugin_types.h
src/: hook_core.cpp  hook_manager.cpp  hook_manager.h  plugin.cpp  settings.h
src/parsers/: bethesda_ba2_parser.cpp  gamemaker_data_parser.cpp  unity_bundle_parser.cpp  unreal_pak_parser.cpp
src/parsers/formats/: bethesda_ba2.hpp  gamemaker_data.hpp  pickle_reader.cpp  pickle_reader.hpp  renpy_rpa.hpp  rpa_archive.cpp  unity_bundle.hpp  unreal_pak.hpp
